# llvm-backend

./: README.md
ch3/llvm_ir/: CMakeLists.txt
ch3/llvm_ir/your_turn/: populate_function.cpp
ch3/machineir/: CMakeLists.txt  main.cpp
ch3/machineir/your_turn/: populate_function.cpp
ch4/implicit_func_scope_change/: CMakeLists.txt
ch4/simple_cst_propagation/: CMakeLists.txt
ch4/simple_cst_propagation/your_turn/: populate_function.cpp
ch5/your_first_pass/: CMakeLists.txt  main.cpp
ch5/your_first_pass/your_turn/: passWithLegacyPM.cpp  passWithNewPM.cpp  passWithNewPM.h
ch5/your_first_pipeline/: CMakeLists.txt
ch5/your_first_pipeline/your_turn/: passPipelineWithLegacyPM.cpp  passPipelineWithNewPM.cpp
